   * Add CPS calculation rule "No space/punctuation" - thx MMT Gouenji - Tech
   * Add some support for reading Manzanita dvb format - thx thehulk
* IMPROVED:
   * Update Bulgarian translation - thx Калин
   * Update Hungarian translation - thx Zityi
   * Update Chinese translation - thx nkh0472
   * Update Portuguese translation - thx hugok79
   * Update French translation - thx Pierre
   * Update dotnet framework to 4.8
   * Add some new English names - thx Omair
   * Add err msg if user ocr fix replacelist invalid - thx sialivi
   * Improve burn-in settings - thx Leon 
   * Add AMD support (hevc_amf + h264_amf) for burn-in - thx MMT Gouenji - Tech
   * Support curly brackets in export custom text - thx Leon
   * BD edit - always open bdsup raw (no merging)
   * Use "UTF-8" in uppercase for .itt files - thx Murat
   * Separate vertical margins in BD sup editor - thx von Suppé
   * Add new models for audio-to-text - thx Stefan
   * Improve ASSA support for "Remove Leading '...'" - thx von Suppé
   * Add 4 extra colors to recent colors in color picker
   * Add a little vobsub support in spellcheck - thx cyzs233
   * Add error msg for audio-to-text with online video - thx ilCosmico
   * Try to keep assa tags after translate - thx eladkarako
   * Remember online video for recent files (auto-reload)
   * Allow for large .mcc files in "cmd line convert" - thx Emerica
   * Improve gap info in File - Statistics
* FIXED:
   * Fix selected line update after load of new sub - thx Jamakmake
   * Removed vertical-scroll-bar-auto-show-hide as it could freeze SE
   * Remove wrong ocr replace rule - thx Omair
   * Minor fixes for installer file associations - thx darkred / in4u / BKR-TN
   * Fix for auto-backup origianl - thx OmrSi
   * Make "Ignore formatting" work in compare text box coloring - thx Martin
   * Waveform fix for woking with online video files - thx Dheeraj
   * Fix bug when opening a file with video offset - thx OmrSi